# brainio

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  build.sh  environment_lock.yml  meta.yaml  pyproject.toml  pytest.ini  setup.py
brainio/: __init__.py  assemblies.py  catalogs.py  entrypoint.py  fetch.py  lookup.py  packaging.py  stimuli.py
brainio-test/: MANIFEST.in  setup.py
brainio-test/brainio_test/: entrypoint.py  lookup.csv  lookup2.csv
docs/: SPECIFICATION.md  aws_access.md  glossary.md  packaging.rst
intake_brainio/: __init__.py
tests/: README.md  conftest.py  test_assemblies.py  test_import.py  test_lookup.py  test_packaging.py  test_stimuli.py  test_transform.py
tests/files/: assy_test_TestMe.nc  assy_test_package_assembly.nc  assy_test_package_assembly_extras.nc
tests/images/: image_test_ten_images.csv
